bottomStyle.css
.bottom {
    width: 75%;
    display: flex;
    flex-direction: row;
    margin: auto;
    background-color: white;
    box-shadow: 0 0 10px #000;
    font-family: sans-serif;
    position: relative;
    bottom: 3em;
    border-radius: 1em;
    height: 400px;
}

.bottom-text{
    padding-top: 2%;
    font-size: 1em;
    display: flex;
    flex-direction: column;
    padding-bottom: 5%;
    padding-left: 3%;
    padding-right: 3%;
}

.vl {
    border-left: 2px solid gray;
    height: 325px;
    align-self: center;
  }

.hl {
    display: none;
}

@media screen and (max-width: 960px) {
  .bottom
  {
    flex-direction: column;
    font-size: 1em;
    bottom: 0.3em;
    box-shadow: 0 0 5px black;
    font-size: 3vw;
    height: 100%;
  }
  .bottom-text
  {
    padding-bottom: 0.5%;
  }
  .vl
  {
    display: none;
  }
  .hl
  {
    display: block;
    border-bottom: 2px solid gray;
    width: 90%;
    align-self: center;
  }

